# Token

./: ECONOMICS.md  PROTOCOL_PHA.md  README.md  THREAT_MODEL.md  explorer.html  ghostledger_architecture_v2.docx  ghostledger_whitepaper_v0.1.md  run_node.py  send_tx.py
Rust/: txt.txt
Rust/ghost_core/: Cargo.toml  PROTOCOL.md  txt.txt
Rust/ghost_core/branches/: Cargo.toml
Rust/ghost_core/crypto/: Cargo.toml
Rust/ghost_core/crypto/examples/: gen_wallet.rs
Rust/ghost_core/crypto/src/: commitments.rs  hashing.rs  lib.rs  range_proof.rs  stealth.rs  wallet.rs
Rust/ghost_core/ghost-explorer/: Cargo.toml
Rust/ghost_core/ghost-explorer/src/: main.rs
Rust/ghost_core/ghost-node/: Cargo.toml
Rust/ghost_core/ghost-node/src/: bootstrap.rs  cli.rs  genesis.rs  gossip.rs  main.rs  node_runner.rs  peer_discovery.rs  ws_server.rs
Rust/ghost_core/network/: Cargo.toml
Rust/ghost_core/network/src/: lib.rs  peer_list.rs  ws_client.rs  ws_manager.rs  ws_message.rs
Rust/sim/: adversarial.py  conflict_resolver.py  dag.py  experiments.py  metrics.py  parent_selection.py  run_simulation.py
app/: config.py  main.py  run_node.py  send_tx.py
app/branches/: branch_manager.py  coordinator.py
app/consensus/: conflict_resolver.py  engine.py
app/crypto/: wallet.py
app/ledger/: dag.py  node.py  pruner.py  transaction.py  validator.py
app/network/: client.py  peer_reputation.py  server.py  ws_server.py
app/storage/: snapshot.py
app/token/: ghost.py  staking.py
data/: dag_snapshot.json
python/: conftest.py
python/app/: config.py
python/data/: dag_snapshot.json  node_8000_snapshot.json
python/tests/: test_dag.py  test_node.py  test_pruner.py  test_quorum.py  test_staking.py  test_stealth.py  test_token.py
tests/: test_branches.py  test_conflict.py  test_dag.py  test_peer_reputation.py  test_snapshot.py  test_tip_selector.py  test_validator.py  test_websocket.py
(+54 files in other folders)
