[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
zeroize = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
curve25519-dalek = { version = "4", features = ["rand_core"] }
