[package]
name = "ghost-explorer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ghost-explorer"
path = "src/main.rs"

[dependencies]
network = { path = "../network" }
tokio = { version = "1", features = ["full"] }
ratatui = "0.26"
crossterm = "0.27"
serde_json = "1"
futures-util = "0.3"
tokio-tungstenite = "0.21"