[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
ledger = { path = "../ledger" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }